--- a/feature.html
+++ b/feature.html
@@ -45,9 +45,9 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</small>
-                    <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>info@example.com</small>
+                    <small><i class="fa fa-phone-alt mr-2"></i></small>
+                    <small class="px-3">|+265 999 360 325</small>
+                    <small><i class="fa fa-envelope mr-2"></i> mtendereeduconsult@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
@@ -86,19 +86,34 @@
                 <div class="navbar-nav mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="course.html" class="nav-item nav-link">Courses</a>
+                    <a href="services.html" class="nav-item nav-link">Services</a>
+                    <a href="course.html" class="nav-item nav-link">Programs</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
                         <div class="dropdown-menu m-0">
                             <a href="detail.html" class="dropdown-item">Course Detail</a>
-                            <a href="feature.html" class="dropdown-item">Our Features</a>
-                            <a href="team.html" class="dropdown-item">Instructors</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                            <a href="feature.html" class="dropdown-item">Gallery</a>
+                            <a href="team.html" class="dropdown-item">Team</a>
                         </div>
                     </div>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Universities</a>
+                        <div class="dropdown-menu m-0">
+                            <a href="detail.html" class="dropdown-item">Napal Univesity</a>
+                            <a href="feature.html" class="dropdown-item">Chandigarh Univesity</a>
+                            <a href="team.html" class="dropdown-item">Punjab University</a>
+                            <a href="detail.html" class="dropdown-item">Delhi Univesity</a>
+                            <a href="detail.html" class="dropdown-item">Kolkata Univesity</a>
+                            <a href="detail.html" class="dropdown-item">Goa University</a>
+                        </div>
+                    </div>                    
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="#" class="nav-item nav-link">Blog</a>
+                    <a href="#" class="nav-item nav-link d-none d-lg-block">
+                        <i class="fa fa-search"></i>
+                    </a>
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Join Us</a>
+                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
             </div>
         </nav>
     </div>
