--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
+            <div class="owl-carousel owl-theme">
+                <div class="item active" data-bs-interval="10000">
                     <img src="images/hero-bg.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Welcome to Mtendere Education Consult</h5>
@@ -138,7 +138,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
+                <div class="item" data-bs-interval="2000">
                     <img src="images/hero-bg.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                     <h5>Career Guidance, admission and visa support</h5>
@@ -148,7 +148,7 @@
                     </p>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="item">
                     <img src="img/c0f4e6ff-82a4-45d8-a3d5-8996247af5d0.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                     <h5>International studies for all</h5>
@@ -159,50 +159,16 @@
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <button class="control-prev" type="button" data-bs-target="#carouselDark" data-bs-slide="prev">
+                <span class="control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselDark" data-bs-slide="next">
+                <span class="control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
         </div>                
     </section>
-
-
-    <!-----<section id="hero" class="wow fadeIn">
-        <!---- owl-carousel --
-        <div class="owl-carousel owl-theme">
-            <div class="item">
-                <img src="img/c0f4e6ff-82a4-45d8-a3d5-8996247af5d0.jpg" alt="hero-1">
-                <div class="hero-container">
-                    <h1>Welcome to Mtendere Education Consult</h1>
-                    <h2>Study Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                </div>
-            </div>
-            <div class="item">
-                <img src="img/header.jpg" alt="hero-2">
-                <div class="hero-container">
-                    <h1>Welcome to Mtendere Education Consult</h1>
-                    <h2>Study Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/hero-bg.jpg " alt="hero-3">
-                <div class="hero-container">
-                    <h1>Welcome to Mtendere Education Consult</h1>
-                    <h2>Study Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                </div>
-            </div>
-        </div>
-        <!-- End owl-carousel ---
-    </section>
-    <!-- #hero --
-    ----->
 
     <!--Get Started Section-->
     <section id="get-started" class="padd-section text-center">
