--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <i class="fa fa-search"></i>
                     </a>
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
+                <a href="login.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
             </div>
         </nav>
     </div>
