--- a/index.html
+++ b/index.html
@@ -1018,6 +1018,38 @@
     
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
+    <section id="chatbox" class="ai">
+        <input type="checkbox" id="click">
+        <label for="click">
+            <i class="fab fa-facebook-messenger"></i>
+            <i class="fas fa-times"></i>
+        </label>
+        <div class="wrapper">
+            <div class="head-text">
+                ChatBot - Online
+            </div>
+            <div class="chat-box">
+                <div class="desc-text">
+                    Kindly complete the form below to begin chatting with our ai model and our next available agent.
+                </div>
+                <form action="#">
+                    <div class="field">
+                        <input type="text" placeholder="Your Name" required>
+                    </div>
+                    <div class="field">
+                        <input type="email" placeholder="Email Address" required>
+                    </div>
+                    <div class="field textarea">
+                        <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
+                    </div>
+                    <div class="field">
+                        <button type="submit"><a href="#chataimodel">Chat</a></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/jquery/jquery-migrate.min.js"></script>
