--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Glowing Inputs Login Form</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="css/loginstyle.css">
     </head>
     <body>
         <div class="login-form">
@@ -34,6 +34,6 @@
                 </div>
             </form>
         </div>
-        <script src="script.js"></script>
+        <script src="login.js"></script>
     </body>
 </html>
