--- a/index.html
+++ b/index.html
@@ -120,55 +120,32 @@
     <!-- Navbar End -->
 
     <!-- Hero Section -->
-    <section id="hero" class="wow fadeIn">
-        <div id="carouselDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="owl-carousel owl-theme">
-                <div class="item active" data-bs-interval="10000">
-                    <img src="images/hero-bg.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Welcome to Mtendere Education Consult</h5>
-                        <p>
-                            We Offer Unparalleled Education
-                            <a href="#" class="btn btn-primary px-4 py-2">Learn More</a>
-                        </p>
-                    </div>
-                </div>
-                <div class="item" data-bs-interval="2000">
-                    <img src="images/hero-bg.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                    <h5>Career Guidance, admission and visa support</h5>
-                    <p>
-                        We provide guidance on your career path
-                        <a href="#" class="btn btn-primary px-4 py-2">Learn More</a>
-                    </p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="img/c0f4e6ff-82a4-45d8-a3d5-8996247af5d0.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                    <h5>International studies for all</h5>
-                    <p>
-                        We offer a world-class Scholarships and studies
-                        <a href="#" class="btn btn-primary px-4 py-2">Learn More</a>
-                    </p>
-                    </div>
-                </div>
-            </div>
-            <button class="control-prev" type="button" data-bs-target="#carouselDark" data-bs-slide="prev">
-                <span class="control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselDark" data-bs-slide="next">
-                <span class="control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>                
-    </section>
+    <div id="headerstart">
+        <section id="slider">
+            <input type="radio" name="slider" id="s1" checked>
+            <input type="radio" name="slider" id="s2">
+            <input type="radio" name="slider" id="s3">
+            <input type="radio" name="slider" id="s4">
+            <input type="radio" name="slider" id="s5">
+
+            <label for="s1" id="slide1">
+                <img src="https://i.pinimg.com/originals/2b/de/de/2bdede0647e3cdf75b44ea33723201d9.jpg" alt="">
+            </label>
+            <label for="s2" id="slide2">
+                <img src="https://images6.alphacoders.com/462/thumb-1920-462371.jpg" alt="">
+            </label>
+            <label for="s3" id="slide3">
+                <img src="https://wallpaperaccess.com/full/1154341.jpg" alt="">
+            </label>
+            <label for="s4" id="slide4">
+                <img src="https://wallpapercave.com/wp/wp2634222.jpg" alt="">
+            </label>
+            <label for="s5" id="slide5">
+                <img src="https://images5.alphacoders.com/343/thumb-1920-343645.jpg" alt="">
+            </label>
+        </section>
+    </div>
+    
 
     <!--Get Started Section-->
     <section id="get-started" class="padd-section text-center">
