--- a/index.html
+++ b/index.html
@@ -130,23 +130,53 @@
 
             <label for="s1" id="slide1">
                 <img src="https://i.pinimg.com/originals/2b/de/de/2bdede0647e3cdf75b44ea33723201d9.jpg" alt="">
+                <div class="hero-container">
+                    <h1>Welcome to Mtendere Education Consult</h1>
+                    <h2>Study Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
             </label>
             <label for="s2" id="slide2">
                 <img src="https://images6.alphacoders.com/462/thumb-1920-462371.jpg" alt="">
+                <div class="hero-container">
+                    <h1>Discover our world-class education</h1>
+                    <h2>Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
             </label>
             <label for="s3" id="slide3">
                 <img src="https://wallpaperaccess.com/full/1154341.jpg" alt="">
+                <div class="hero-container">
+                    <h1>
+                        Connect with our experts
+                    </h1>
+                    <h2>Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
             </label>
             <label for="s4" id="slide4">
                 <img src="https://wallpapercave.com/wp/wp2634222.jpg" alt="">
+                <div class="hero-container">
+                    <h1>
+                        Learn from our world-class instructors
+                    </h1>
+                    <h2>Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
             </label>
             <label for="s5" id="slide5">
                 <img src="https://images5.alphacoders.com/343/thumb-1920-343645.jpg" alt="">
+                <div class="hero-container">
+                    <h1>
+                        Take Eligibility Quiz
+                    </h1>
+                    <h2>To Unlock Possibilities.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
             </label>
         </section>
     </div>
     
-
     <!--Get Started Section-->
     <section id="get-started" class="padd-section text-center">
         <div class="container">
@@ -179,7 +209,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="feature-block">
-                        <h4>Financial Aid & Scholarship Guidance</h4>
+                        <h4>Finances & Scholarship Guidance</h4>
                         <p>Our exclusive sources keep updating scholarships as & when they become available. Ask us how
                             to manage
                             finances for education abroad. Be it your own money or a loan, our expert counselors will
