--- a/index.html
+++ b/index.html
@@ -566,8 +566,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-6">
-                                <button class="btn btn-primary btn-block" type="submit" style="height: 60px;">Sign Up
-                                    Now</button>
+                                <button class="btn btn-primary btn-block" type="submit" style="height: 60px;">Sign Up Now</button>
                             </div>
                         </div>
                     </form>
@@ -583,8 +582,8 @@
             <h1 class="display-4 text-uppercase text-center mb-5">Visit Our Projects</h1>
             <div class="row">
                 <div class="col-12 text-center mb-2">
-                    <ul class="list-inline mb-4" id="portfolio-flters">
-                        <li class="btn btn-outline-dark text-uppercase py-2 px-4 active" data-filter="*">
+                    <ul class="list-inline mb-4" id="portfolioFilter">
+                            <li class="btn btn-outline-dark text-uppercase py-2 px-4 active" data-filter="*">
                             <i class="fa fa-star text-primary mr-2"></i>All
                         </li>
                         <li class="btn btn-outline-dark text-uppercase py-2 px-4" data-filter=".first">
