--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta content="" name="description">
 
     <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon">
+    <!----<link href="img/favicon.png" rel="icon">
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+    ----->
 
     <!-- Google Fonts -->
     <link
@@ -21,7 +22,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Bootstrap css -->
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+    <link href="lib/bootstrap/css/bootstrap.css"  rel="stylesheet">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
 
@@ -76,7 +77,7 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <div class="navbar-brand" style="background-color: rgb(27, 4, 161);">
+            <div class="navbar-brand" style="background-color: rgba(27, 15, 96, 0.864);">
                 <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
             </div>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -91,9 +92,9 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
                         <div class="dropdown-menu m-0">
-                            <a href="detail.html" class="dropdown-item">Course Detail</a>
-                            <a href="feature.html" class="dropdown-item">Gallery</a>
+                            <a href="detail.html" class="dropdown-item">Galllery</a>
                             <a href="team.html" class="dropdown-item">Team</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -107,7 +108,6 @@
                             <a href="detail.html" class="dropdown-item">Goa University</a>
                         </div>
                     </div>                    
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                     <a href="#" class="nav-item nav-link">Blog</a>
                     <a href="#" class="nav-item nav-link d-none d-lg-block">
                         <i class="fa fa-search"></i>
