--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="dropdown-menu m-0">
                             <a href="detail.html" class="dropdown-item">Galllery</a>
                             <a href="team.html" class="dropdown-item">Team</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="dropdown-item">Contact</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
