--- a/index.html
+++ b/index.html
@@ -831,9 +831,9 @@
                         </div>
                         
                     </div>
-                    <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="blog col-lg-4 col-md-6 mb-4">
                         <div class="blog-item position-relative">
-                            <img class="img-fluid w-100" src="img/blog-3.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/portfolio-1.jpg" alt="">
                             <div class="blog-overlay">
                                 <div class="d-flex align-items-center justify-content-start">
                                     <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
