--- a/index.html
+++ b/index.html
@@ -1049,51 +1049,14 @@
                         <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
                     </div>
                     <div class="field">
-                        <button type="submit"><a href="#chataimodel">Chat</a></button>
+                        <button type="submit"><a href="chat.html">Chat</a></button>
                     </div>
                 </form>
             </div>
         </div>
     </section>
 
-    <!-- Chat Start -->
-    <div class="chat-box">
-        <div id="chat-html">
-            <div id="chat-body">
-                <section id="chat-header">
-                    <div>
-                        <h2>JavaScript ChatBot</h2>
-                        <p class="typing">bot is typing. . .</p>
-                    </div>
-                    <div id="toogle-chat">
-                        <img src="https://javascript-chatbot.vercel.app/src/images/chat_icon.png" class="suggest-chat">
-                    </div>
-                </section>
-                
-                <div class="main-background">
-                    <div>
-                        <h3>JavaScript ChatBot</h3>
-                        <p>Click on Top Right button to view all available chats.</p>
-                    </div>
-                </div>
-                <section class="all-questions">
-                    <h2>Suggested Chats</h2>
-                    <div class="questions container"></div>
-                </section>
-                <section id="chat-footer">
-                    <form id="chat-form">
-                        <input type="text" class="chat-input" required>
-                        <button type="submit" class="chat-submit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path
-                            d="M24 0l-6 22-8.129-7.239 7.802-8.234-10.458 7.227-7.215-1.754 24-12zm-15 16.668v7.332l3.258-4.431-3.258-2.901z" />
-                            </svg>
-                        </button>
-                    </form>
-                </section>
-            </div>
-        </div>
-    </div>
-
+    
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/jquery/jquery-migrate.min.js"></script>
