--- a/index.html
+++ b/index.html
@@ -754,9 +754,9 @@
         <div class="container py-5">
             <h1 class="display-4 text-uppercase text-center mb-5">Our Blog</h1>
             <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
+                <div class="col-lg-2 col-md-4 mb-4">
                     <div class="blog-item position-relative">
-                        <img class="img-fluid w-100" src="img/blog-1.jpg" alt="">
+                        <img class="img-fluid" src="img/blog-1.jpg" alt="">
                         <div class="blog-overlay">
                             <div class="d-flex align-items-center justify-content-start">
                                 <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
