--- a/index.html
+++ b/index.html
@@ -915,39 +915,31 @@
                     <img class="img-fluid rounded mx-auto my-4" src="img/testimonial-1.jpg" alt="">
                     <h5 class="text-uppercase">Client Name</h5>
                     <p class="text-uppercase">Profession</p>
-                    <p class="text-secondary">
-
-                    </p>
+                    <p class="text-secondary">Tempor lorem dolor sea et ipsum, lorem justo kasd dolore vero eos. Lorem duo ipsum sea amet et clita dolor</p>
                 </div>
                 <div class="testimonial-item position-relative text-center rounded p-4">
                     <img class="img-fluid rounded mx-auto my-4" src="img/testimonial-2.jpg" alt="">
                     <h5 class="text-uppercase">Client Name</h5>
                     <p class="text-uppercase">Profession</p>
-                    <p class="text-secondary">
-
-                    </p>
+                    <p class="text-secondary">Tempor lorem dolor sea et ipsum, lorem justo kasd dolore vero eos. Lorem duo ipsum sea amet et clita dolor</p>
                 </div>
                 <div class="testimonial-item position-relative text-center rounded p-4">
                     <img class="img-fluid rounded mx-auto my-4" src="img/testimonial-3.jpg" alt="">
                     <h5 class="text-uppercase">Client Name</h5>
                     <p class="text-uppercase">Profession</p>
-                    <p class="text-secondary">
-
-                    </p>
+                    <p class="text-secondary">Tempor lorem dolor sea et ipsum, lorem justo kasd dolore vero eos. Lorem duo ipsum sea amet et clita dolor</p>
                 </div>
                 <div class="testimonial-item position-relative text-center rounded p-4">
                     <img class="img-fluid rounded mx-auto my-4" src="img/testimonial-4.jpg" alt="">
                     <h5 class="text-uppercase">Client Name</h5>
                     <p class="text-uppercase">Profession</p>
-                    <p class="text-secondary">
-
-                    </p>
+                    <p class="text-secondary">Tempor lorem dolor sea et ipsum, lorem justo kasd dolore vero eos. Lorem duo ipsum sea amet et clita dolor</p>
                 </div>
             </div>
         </div>
     </div>
     <!-- Testimonial End -->
-    
+
     <!-- Footer -->
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
