--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
 
-  <link href="chatstyle.css" rel="stylesheet" />
+  <link href="css/chat.css" rel="stylesheet" />
 </head>
 <body>
   <header>
