--- a/chat.html
+++ b/chat.html
@@ -43,6 +43,6 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
-  <script src="chat.js"></script>s
+  <script src="js/chat.js"></script>s
 </body>
 </html>
