--- a/index.html
+++ b/index.html
@@ -119,63 +119,61 @@
     </div>
     <!-- Navbar End -->
 
-    <!-- Hero Section -->
-    <div id="headerstart">
-        <section id="slider">
-            <input type="radio" name="slider" id="s1" checked>
-            <input type="radio" name="slider" id="s2">
-            <input type="radio" name="slider" id="s3">
-            <input type="radio" name="slider" id="s4">
-            <input type="radio" name="slider" id="s5">
-
-            <label for="s1" id="slide1">
-                <img src="https://i.pinimg.com/originals/2b/de/de/2bdede0647e3cdf75b44ea33723201d9.jpg" alt="">
-                <div class="hero-container">
-                    <h1>Welcome to Mtendere Education Consult</h1>
-                    <h2>Study Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+    <!-- Carousel Start -->
+    <div class="header-carousel owl-carousel">
+        <div class="header-carousel-item">
+            <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+            <div class="carousel-caption">
+                <div class="carousel-caption-content p-3" style="max-width: 900px;">
+                    <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4 wow fadeInUp" data-wow-delay="0.1s" style="letter-spacing: 3px;"></h4>
+                    <div class="hero-container">
+                        <h1>Welcome to Mtendere Education Consult</h1>
+                        <h2>Study Abroad.</h2>
+                        <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                    </div>
+                    <div class="pt-2">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5 m-2 wow fadeInLeft" data-wow-delay="0.1s" href="#">Join Now</a>
+                        <a class="btn btn-secondary rounded-pill text-white py-3 px-5 m-2 wow fadeInRight" data-wow-delay="0.3s" href="#">Read More</a>
+                    </div>
                 </div>
-            </label>
-            <label for="s2" id="slide2">
-                <img src="https://images6.alphacoders.com/462/thumb-1920-462371.jpg" alt="">
-                <div class="hero-container">
-                    <h1>Discover our world-class education</h1>
-                    <h2>Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+            </div>
+        </div>
+        <div class="header-carousel-item">
+            <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+            <div class="carousel-caption">
+                <div class="carousel-caption-content p-3" style="max-width: 900px;">
+                    <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Let's Dance</h4>
+                    <div class="hero-container">
+                        <h1>Welcome to Mtendere Education Consult</h1>
+                        <h2>Study Abroad.</h2>
+                        <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                    </div>
+                    <div class="pt-2">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5 m-2 wow fadeInLeft" data-wow-delay="0.1s" href="#">Join Now</a>
+                        <a class="btn btn-secondary rounded-pill text-white py-3 px-5 m-2 wow fadeInRight" data-wow-delay="0.3s" href="#">Read More</a>
+                    </div>
                 </div>
-            </label>
-            <label for="s3" id="slide3">
-                <img src="https://wallpaperaccess.com/full/1154341.jpg" alt="">
-                <div class="hero-container">
-                    <h1>
-                        Connect with our experts
-                    </h1>
-                    <h2>Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+            </div>
+        </div>
+        <div class="header-carousel-item">
+            <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+            <div class="carousel-caption">
+                <div class="carousel-caption-content p-3" style="max-width: 900px;">
+                    <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Let's Dance</h4>
+                    <div class="hero-container">
+                        <h1>Welcome to Mtendere Education Consult</h1>
+                        <h2>Study Abroad.</h2>
+                        <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                    </div>
+                    <div class="pt-2">
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5 m-2 wow fadeInLeft" data-wow-delay="0.1s" href="#">Join Now</a>
+                        <a class="btn btn-secondary rounded-pill text-white py-3 px-5 m-2 wow fadeInRight" data-wow-delay="0.3s" href="#">Read More</a>
+                    </div>
                 </div>
-            </label>
-            <label for="s4" id="slide4">
-                <img src="https://wallpapercave.com/wp/wp2634222.jpg" alt="">
-                <div class="hero-container">
-                    <h1>
-                        Learn from our world-class instructors
-                    </h1>
-                    <h2>Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                </div>
-            </label>
-            <label for="s5" id="slide5">
-                <img src="https://images5.alphacoders.com/343/thumb-1920-343645.jpg" alt="">
-                <div class="hero-container">
-                    <h1>
-                        Take Eligibility Quiz
-                    </h1>
-                    <h2>To Unlock Possibilities.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                </div>
-            </label>
-        </section>
+            </div>
+        </div>
     </div>
+    <!-- Carousel End -->
 
     <!--Get Started Section-->
     <section id="get-started" class="padd-section text-center">
